ghc-4335c07/testsuite/tests/roles/should_fail/Roles7.hs
{-# LANGUAGE RoleAnnotations #-}

module Roles7 where

class Bar a
type role Bar repesentational
 -- spelling error intentional!